te-36 fixed wrong dependencies in composer.json files

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
+    "spryker/company-business-unit": "*",
+    "spryker/merchant": "*",
+    "spryker/product-list-data-import": "*",
+    "spryker/propel": "*",
     "spryker/testify": "*"
   },
   "autoload": {
