--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
+    "spryker/company": "*",
     "spryker/company-business-unit": "*",
     "spryker/merchant": "*",
     "spryker/product-list-data-import": "*",
