--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "spryker/merchant-relationship-product-list-data-import",
     "type": "library",
     "description": "MerchantRelationshipProductListDataImport module",
-    "license": "MIT",
+    "license": "proprietary",
     "require": {
         "php": ">=8.2",
         "spryker/data-import": "^1.3.0",
